# peak-fettle

./: .gitignore  APPLY_ALL_pending.sql  AVATAR_CONCEPTS_2026-06-06.html  CLAUDE.md  CMakeLists.txt  COMPANION_APP_NAMING_2026-05-29.md  COMPANION_APP_ROADMAP_2026-05-29.md  COMPANION_APP_STYLE_OPTIONS_2026-05-29.md  DEV_HANDOFF_2026-06-06.md  DEV_PROMPT_2026-05-26-FULL-BACKLOG.md  DEV_ROADMAP_2026-04-30.md  DEV_ROADMAP_2026-05-01.md  DEV_ROADMAP_2026-05-03.md  DEV_ROADMAP_2026-05-04.md  DEV_ROADMAP_2026-05-14.md  DEV_ROADMAP_2026-05-18.md  DEV_ROADMAP_2026-05-22.md  DEV_ROADMAP_2026-05-23.md  DEV_ROADMAP_2026-05-24.md  DEV_ROADMAP_2026-05-25-LATE.md  DEV_ROADMAP_2026-05-25-PM.md  DEV_ROADMAP_2026-05-25.md  DEV_ROADMAP_2026-05-29.md  FEATURE_RESEARCH_AND_ALGO_PLANGEN_2026-06-11.md  LOCAL_FIRST_MIGRATION_PLAN_2026-06-06.md  OPEN_QUESTIONS_FOR_FOUNDER.md  Peak Fettle logos.html  RUN_SETUP.bat  TESTER_PROMPT_2026-05-11-QUICK-FIX.md  TESTER_PROMPT_2026-05-15-HOTFIX-SPRINT.md  TESTER_PROMPT_2026-05-16-MOCK-REMOVAL.md  TESTER_PROMPT_2026-05-24-PUSH-002-VERIFY.md  TRAINING_ENGINE_SPEC_2026-06-11.md  all_migrations.sql  beta-feedback-report-2026-05-11.md  competition_analysis_agent.md  competition_analysis_exec_report.docx  compute_percentile.sql  cost_analysis_reference.md  data_analyst_skill.md  (+19 more)
.claude/: .writetest  AGENT_TOOLKIT.md  install-toolkit.sh  launch.json  settings.local.json
MyApp/app/: _layout.tsx
audits/: DB_CONTRACT_2026-06-01.md
codebase-curriculum/: 00_TEACHING_METHODOLOGY.md  PEAK_FETTLE_TEXTBOOK.html  PEAK_FETTLE_TEXTBOOK.md
db/: APPLY_2026-06-10_pending.sql  README.md  reset_public_schema.sql  schema.sql
legal/: lifeos-privacy-addendum.md
lifeos/: CONTENT_SAFETY.md  DIRECTION_MODEL_DERIVATION.md  LIFEOS_BUILD_STATUS.md  LIFEOS_COMPLETION_2026-07-02.md  LIFEOS_DESIGN_CONTRACT_V3.md  LIFEOS_V3_VERIFICATION_2026-06-21.md  app.json  babel.config.js  eas.json  package-lock.json  package.json  tsconfig.json
marketing-site/: .env.example  .gitignore  README.md  SEO-RESEARCH.md  next.config.mjs  package-lock.json  package.json  vercel.json
migrations/: 20260430_add_daily_health_log.sql  20260430_add_habits.sql  20260430_initial_schema.sql  20260502_percentile_engine.sql  20260502_refresh_token_revocation.sql  20260502_seed_exercise_library.sql  20260503_cosmetics.sql  20260503_exercise_prs.sql  20260503_group_streak_credits.sql  20260503_lift_inputs_view.sql  20260503_rls_policies.sql  20260504_daily_health_metrics.sql  20260504_user_constraints.sql  20260505_sets_weight_raw.sql  20260510_1rm_confirmation.sql  20260510_exercise_prs_delete_trigger.sql  20260510_exercise_prs_recompute_trigger.sql  20260510_percentile_arch_1_6.sql  20260510_percentile_engine_v2.sql  20260515_percentile_hotfix_consolidation.sql  20260515_plans_active.sql  20260516_theme_preference.sql  20260517_cardio_import.sql  20260517_rest_day_designation.sql  20260517_template_library.sql  20260517_wilks_score.sql  20260518_fcm_token.sql  20260518_notification_prefs.sql  20260519_paywall_trigger.sql  20260519_workouts_activity_type.sql  README.md  SUPERSEDED.md
mobile/: .easignore  .env.example  .eslintrc.js  .gitignore  .npmrc  app.json  babel.config.js  eas.json  package-lock.json  package.json  tsconfig.json
ollama-agents/: qwen-coder.mf  qwen-planner.mf  qwen-reviewer.mf  rebuild-models.bat  setup-claude-code.ps1
peak-fettle-agents/: .env.example  SETUP.md  package-lock.json  package.json
peak-fettle-app/: .env.example  app.json  package.json
qml/: EditSetDialog.qml  ExercisePickerDialog.qml  HomePage.qml  LandingPage.qml  Main.qml  OnboardingPage.qml  PercentilesPage.qml  ProfileSurveyPage.qml  ProgressGraphPage.qml  SetTrackerPage.qml  SettingsPage.qml  SignUpPage.qml  Theme.qml
scripts/: install-hooks.sh  pre-commit.sh
src/: EffortPreference.cpp  EffortPreference.h  ExerciseLibrary.cpp  ExerciseLibrary.h  StrengthCurve.cpp  StrengthCurve.h  UnitPreference.cpp  UnitPreference.h  UserProfile.cpp  UserProfile.h  exercise.cpp  exercise.h  main.cpp  set.cpp  set.h  usermanager.cpp  usermanager.h  workouttracker.cpp  workouttracker.h
teaching-curriculum/: CURRICULUM_GENERATION_COMPLETE.md  README.md
testing-team/: TESTER_PROMPT_2026-05-01-RIR.md  dev-tickets-round1.md
tickets/: TICKET-001-kg-lbs-toggle.md  TICKET-015-percentile-architecture-clarification.md  TICKET-044-rpe-logging-field.md  TICKET-045-1rm-formula-selection.md  TICKET-048-exercise-demos-templates.md  TICKET-064-full-codebase-audit-and-findings-register.md  TICKET-066-consolidate-percentile-scoring-math.md  TICKET-067-eradicate-mock-stub-fallbacks.md  TICKET-069-error-handling-resilience-pass.md  TICKET-071-founder-vision-reconciliation-protocol.md  TICKET-072-companion-mental-health-app-discovery-gate.md  TICKET-073-execute-validate-consolidated-schema.md  TICKET-074-set-logging-format-reconciliation.md  TICKET-077-pro-tier-stepper-features.md  TICKET-078-recent-activity-theme-destructure-crash.md  (+12 more)
(+935 files in other folders)
